# openai-agent

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tox.yml
src/openai_agent/: cli.py  deps.py  registry.py  utils.py
src/openai_agent/repositories/: bash.py  dotenv.py  file_history.py  http_openai.py  http_text_browser.py  http_yandex_search.py  project_files.py
src/openai_agent/services/: ai_agent.py  cli_loop.py
src/openai_agent/settings/: base.py  dev.py  prod.py
tests/: conftest.py  test_cli.py
