[tool.poetry]
name = "openai-agent"
version = "0.1.0"
description = ""
authors = ["Ilya Chistyakov <ilchistyakov@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
openai-agent = "openai_agent.cli:cli"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^0.28.1"
click = "^8.1.7"
simple-settings = "^1.2.0"
flet = "^0.22.0"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
